[package]
name = "treasure-engine-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"
anyhow = "1.0"
rmcp = { version="0.10", features = ["server", "transport-io", "macros", ] }
uuid = { version = "1.19.0", features = ["v4"] }
fastrand = "2.3.0"

